--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
 		<div class="display">
 			<input type="text" readonly size="18" id="d">
 		</div>
-		<div class="keys">
+		<div class="keys"> 
 			<p> 
+					<input type="button" value = "-/+" class = "button function" onClick="v('*-1')">
+					<input type="button" value ="" class = "button function" onClick="v('')">
+					<input type="button" value = "%" class = "button function" onClick="v('*1/100')">
+					<input type="button" value = "π" class = "button operator"  onClick="v('')">	
+			</p>
+			<p>
 					<input type="button" value = "mrc" class = "button function" onClick="alert('Not yet in this calculator game')">
 					<input type="button" value = "m-" class = "button function" onClick="alert('Not yet in this calculator game')">				
 					<input type="button" value = "m+" class = "button function" onClick="alert('Not yet in this calculator game')">
@@ -48,6 +54,7 @@
 					<input type="button" value ="C" class = "button function" onClick="d(' ')">
 					<input type="button" value = "=" class = "button operator" onClick="e( )">
 			</p>
+			
 		</div>
 	</div>
 
