changed bug where images weren't showing

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<input type="button" value = "-/+" class = "button function" onClick="v('*-1')">
 					<input type="button" value ="" class = "button function" onClick="v('')">
 					<input type="button" value = "%" class = "button function" onClick="v('*1/100')">
-					<input type="button" value = "π" class = "button operator"  onClick="v('')">	
+					<input type="button" value = "π" class = "button operator"  onClick="v('3.14')">	
 			</p>
 			<p>
 					<input type="button" value = "mrc" class = "button function" onClick="alert('Not yet in this calculator game')">
