changed square root

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="keys"> 
 			<p> 
 					<input type="button" value = "-/+" class = "button function" onClick="v('*-1')">
-					<input type="button" id="root" value ="√" class = "button root" onClick="root(' ')">
+					<input type="button" id="root" value ="√" class = "button root" onClick="alert('Not yet in this calculator game')">
 					<input type="button" value = "%" class = "button function" onClick="v('*1/100')">
 					<input type="button" value = "π" class = "button operator"  onClick="v('3.14')">	
 			</p>
