--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!--Add your HTML here-->
 	<div class="box">
 		<div class="display">
-			<input type="text" readonly size="18" id="d">
+			<input type="text" placeholder="BLANKO DANKO" readonly size="18" id="d">
 		</div>
 		<div class="keys"> 
 			<p> 
@@ -51,7 +51,7 @@
 			<p> 
 					<input type="button" value = "0" class = "button number" onClick="v('0')">
 					<input type="button" value = "." class = "button number" onClick="v('.')">				
-					<input type="button" value ="C" class = "button function" onClick="d(' ')">
+					<input type="button" value ="C" class = "button function" onClick="d('')">
 					<input type="button" value = "=" class = "button operator" onClick="e( )">
 			</p>
 			
