--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <!--Add your HTML here-->
 	<div class="box">
 		<div class="display">
-			<input type="text" placeholder="BLANKO DANKO" readonly size="18" id="d">
+			<input type="text" placeholder="This is just a 0 " readonly size="18" id="d">
 		</div>
 		<div class="keys"> 
 			<p> 
 					<input type="button" value = "-/+" class = "button function" onClick="v('*-1')">
-					<input type="button" id="root" value ="√" class = "button root" onClick="alert('Not yet in this calculator game')">
+					<input type="button" value ="e" class = "button function" onClick="v(Math.E)">
 					<input type="button" value = "%" class = "button function" onClick="v('*1/100')">
-					<input type="button" value = "π" class = "button operator"  onClick="v('3.14')">	
+					<input type="button" value = "π" class = "button operator"  onClick="v(Math.PI)">	
 			</p>
 			<p>
 					<input type="button" value = "mrc" class = "button function" onClick="alert('Not yet in this calculator game')">
