started square root

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 		<div class="display">
 			<input type="text" placeholder="This is just a 0 " readonly size="18" id="d">
 		</div>
-		<div class="keys"> 
+		<div class="keys">
+			<p>
+				<input type="button" value = "√ "  id = "root" class = "button function" onClick="s(function)"> 
+			</p>
 			<p> 
 					<input type="button" value = "-/+" class = "button function" onClick="v('*-1')">
 					<input type="button" value ="e" class = "button function" onClick="v(Math.E)">
